@@ -1,3 +1,9 @@
+2010-06-21  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	Fix reading file names in Git annotate buffers.
+	* vc-git.el (vc-git-annotate-extract-revision-at-line): Remove
+	trailing whitespace.  Suggested by Eric Hanchrow.  (Bug#6481)
+
 2010-06-20  Alan Mackenzie  <acm@muc.de>
 
 	* progmodes/cc-mode.el (c-before-hack-hook): When the mode is set
